Fixing text align to left

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.content {
+  text-align: left;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
